link button with anchor tag

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         qui officia deserunt mollit anim id est laborum.
       </p>
       <br />
-      <button id="learn-more">Learn More</button>
+      <a href="https://www.lipsum.com/">
+        <button id="learn-more">Learn More</button>
+      </a>
     </section>
     <section id="section2">
       <h1>Heading 2</h1>
